tests/functional/lang/eval-fail-removeAttrs-2.err.exp
error:
       … while calling the 'removeAttrs' builtin
         at /pwd/lang/eval-fail-removeAttrs-2.nix:1:1:
            1| builtins.removeAttrs "" [ 1 ]
             | ^
            2|

       … while evaluating the first argument passed to builtins.removeAttrs

       error: expected a set but found a string: ""
